@@ -1,12 +1,10 @@
 package group2JP2.orderticket.create;
 
+
 import group2JP2.Main;
-import group2JP2.dao.impls.MovieTicketRepository;
 import group2JP2.dao.impls.OrderTicketRepository;
 import group2JP2.entities.MovieTicket;
 import group2JP2.entities.OrderTicket;
-import group2JP2.enums.RepoType;
-import group2JP2.factory.RepositoryFactory;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
@@ -14,7 +12,6 @@ import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
-import javafx.scene.control.Button;
 import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableView;
 import javafx.scene.control.TextField;
@@ -22,10 +19,9 @@ import javafx.scene.control.cell.PropertyValueFactory;
 
 import java.net.URL;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.ResourceBundle;
 
-public class OrderTicketCreatController implements Initializable {
+public class CreateOrderController implements Initializable {
     public TableView<MovieTicket> tbMovieTicket;
     public TableColumn<MovieTicket,Integer> tdIdTicket;
     public TableColumn<MovieTicket,String> tdNameFilm;
@@ -34,14 +30,14 @@ public class OrderTicketCreatController implements Initializable {
     public TableColumn<MovieTicket,String> tdSeatName;
     public TableColumn<MovieTicket,String> tdRoomName;
     public TableColumn<MovieTicket,Float> tdPrice;
-    public TableColumn<MovieTicket, Button> tdAction;
+
     public TextField txtTotalMoney;
     public TextField txtQtyTicket;
 
     public void goToMovieTicket(ActionEvent actionEvent) throws Exception {
-        Parent listMovie = FXMLLoader.load(getClass().getResource("../../movieticket/list/list.fxml"));
+        Parent listMovieTicket = FXMLLoader.load(getClass().getResource("../../movieticket/list/list.fxml"));
         Main.movieStage.setTitle("List Movie Ticket");
-        Main.movieStage.setScene(new Scene(listMovie,Main.width,Main.height));
+        Main.movieStage.setScene(new Scene(listMovieTicket,Main.width,Main.height));
     }
 
     public void goToHome(ActionEvent actionEvent) throws Exception {
@@ -50,21 +46,28 @@ public class OrderTicketCreatController implements Initializable {
         Main.movieStage.setScene(new Scene(home,Main.width,Main.height));
     }
 
+    public void goToListOrder(ActionEvent actionEvent) throws Exception {
+        Parent listOrder = FXMLLoader.load(getClass().getResource("../list/list.fxml"));
+        Main.movieStage.setTitle("List Order");
+        Main.movieStage.setScene(new Scene(listOrder,Main.width,Main.height));
+    }
 
-    public void createOrderTicket(ActionEvent actionEvent) {
+    public void createOrder(ActionEvent actionEvent){
         try{
-            Float totalMoney = Float.parseFloat(txtTotalMoney.getText());
+            Float total = Float.parseFloat(txtTotalMoney.getText());
             Integer qty = Integer.parseInt(txtQtyTicket.getText());
-            OrderTicket o = new OrderTicket(null,qty,totalMoney);
+            OrderTicket o = new OrderTicket(null,qty,total);
             OrderTicketRepository otr = new OrderTicketRepository();
-            if(otr.create(o)){
-
+            if(otr.update(o)){
                 goToListOrder(null);
+            }else{
+                System.out.println("Error");
             }
 
         }catch (Exception e){
             System.out.println(e.getMessage());
         }
+
     }
 
     @Override
@@ -77,23 +80,16 @@ public class OrderTicketCreatController implements Initializable {
             tdSeatName.setCellValueFactory(new PropertyValueFactory<MovieTicket,String>("nameSeat"));
             tdRoomName.setCellValueFactory(new PropertyValueFactory<MovieTicket,String>("nameRoom"));
             tdPrice.setCellValueFactory(new PropertyValueFactory<MovieTicket,Float>("price"));
-            tdAction.setCellValueFactory(new PropertyValueFactory<MovieTicket,Button>("choose"));
-            Float t = Float.valueOf(0);
+            ObservableList<MovieTicket> ls = FXCollections.observableArrayList();
+            ls.addAll(MovieTicket.selectMovieTicket);
+            tbMovieTicket.setItems(ls);
+            txtQtyTicket.setText(String.valueOf(MovieTicket.selectMovieTicket.size()));
+            Float t = new Float(0);
             for(MovieTicket s:MovieTicket.selectMovieTicket){
                 t+=s.getPrice();
             }
             txtTotalMoney.setText(t.toString());
-            txtQtyTicket.setText(String.valueOf(MovieTicket.selectMovieTicket.size()));
-
-            ObservableList<MovieTicket> ls = FXCollections.observableArrayList();
-            ls.addAll(MovieTicket.selectMovieTicket);
-            tbMovieTicket.setItems(ls);
         }
     }
-
-    public void goToListOrder(ActionEvent actionEvent) throws Exception {
-        Parent listOrder = FXMLLoader.load(getClass().getResource("../list/list.fxml"));
-        Main.movieStage.setTitle("List Order");
-        Main.movieStage.setScene(new Scene(listOrder,Main.width,Main.height));
-    }
 }
+
